# QtTetrix

./: .gitignore  CMakeLists.txt  README.md
res/: res.qrc
src/: main.cpp  tetrixboard.cpp  tetrixboard.h  tetrixpiece.cpp  tetrixpiece.h  tetrixwindow.cpp  tetrixwindow.h  userdialog.cpp  userdialog.h  userinfo.cpp  userinfo.h  usermanager.cpp  usermanager.h
